--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
   					 <div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
-  						<summary>Virtual Background</summary>
+  						<summary>Real Time Virtual Background</summary>
   						<div style="height:15px;font-size:15px;">&nbsp;</div>
     						<button onclick="window.location.href='vb.html';" style="  
 						      background-color: #008CBA;
@@ -58,40 +58,6 @@
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					  					<details>
-  						<summary>Deep Color</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
-		  					<img src="images/combined.jpg" alt="restored" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Recycle Bot</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
-		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/re.gif" alt="demo" class="responsive">
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
-		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
-		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
-		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
-		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-
 
   					<details>
   						<summary>Deep Learned Super Resolution</summary>
@@ -118,21 +84,44 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
-  						<summary>Machine Learning Generated Music</summary>
-	  						<div style="height:15px;font-size:15px;">&nbsp;</div>
-			  				<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Music-Composition-GAN">GitHub Page</a></p>
-			  				<audio controls>
-	  						<source src="images/3.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/1.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/2.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  						<summary>Recycle Bot</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
+		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<img src="images/re.gif" alt="demo" class="responsive">
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
+		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
+		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
+		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
+		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Deep Color</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
+		  					<img src="images/combined.jpg" alt="restored" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+  					
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Vector Quantized Variational AutoEncoder</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Pokemon-VQVAE">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
+		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -203,13 +192,21 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
-  						<summary>Vector Quantized Variational AutoEncoder</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Pokemon-VQVAE">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
-		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  						<summary>Machine Learning Generated Music</summary>
+	  						<div style="height:15px;font-size:15px;">&nbsp;</div>
+			  				<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Music-Composition-GAN">GitHub Page</a></p>
+			  				<audio controls>
+	  						<source src="images/3.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:5px;font-size:15px;">&nbsp;</div>
+							<audio controls>
+		  						<source src="images/1.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:5px;font-size:15px;">&nbsp;</div>
+							<audio controls>
+		  						<source src="images/2.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
