--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
 		<!-- Scripts -->
 			<script>
 				fnt=10;
+				min=0
 				if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-				 fnt = 2;
+				 fnt = 5;
+				 min=25
 				}
 				percentile = ['94th percentile','94th percentile','95th percentile','95th percentile','99th percentile','98th percentile']
 				if ('addEventListener' in window) {
@@ -130,7 +132,7 @@
       							fontSize: fnt,
   							},
 					        angleLines: {
-					            display: false
+					            display: true
 					        },
 					        ticks: {
 					            suggestedMin: 0,
