--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
 
 		<!-- Scripts -->
 			<script>
-				fnt=10;
-				min=0
+				fnt=9;
+				min=0;
+				lab = ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'Machine Learning', 'Mathematics']
 				if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 				 fnt = 4;
-				 min=40
+				 min=40;
+				 lab = ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'ML', 'Mathematics']
 				}
 				percentile = ['94th percentile','94th percentile','95th percentile','95th percentile','99th percentile','98th percentile']
 				if ('addEventListener' in window) {
