Mobile Labels Fix

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 				    // The data for our dataset
 				    data: {
-				        labels: ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'Machine Learning', 'Mathematics'],
+				        labels: lab,
 				        datasets: [{
 				            backgroundColor: 'rgb(51, 153, 255, 0.5)',
 				            borderColor: 'rgb(15, 99, 200)',
