--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				 min=40;
 				 lab = ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'ML', 'Mathematics']
 				}
-				percentile = ['94th percentile','94th percentile','95th percentile','95th percentile','99th percentile','98th percentile']
+				percentile = ['94th Percentile','94th Percentile','95th Percentile','95th Percentile','99th Percentile','98th Percentile']
 				if ('addEventListener' in window) {
 					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
