Enhanced Mobile Checking

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				fnt=9;
 				min=0;
 				lab = ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'Machine Learning', 'Mathematics']
-				if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+				if(/iphone|ipod|ipad|android|blackberry|opera mini|opera mobi|skyfire|maemo|windows phone|palm|iemobile|symbian|symbianos|fennec/i.test(navigator.userAgent.toLowerCase())){
 				 fnt = 4;
 				 min=40;
 				 lab = ['Deep Learning', 'Data Science', 'Algorithms', 'Software Engineering', 'ML', 'Mathematics']
