Added Controls Frenzy Project

--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,25 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
+  						<summary>Controls Frenzy</summary>
+  						<div style="height:15px;font-size:15px;">&nbsp;</div>
+  						<p style="text-align: center;">Two Player <i>Bomberman</i> style game developed in C# where controls get randomized every round.</p>
+    						<button onclick="window.location.href='https://vee-upatising.github.io/Controls-Frenzy/';" style="  
+						      background-color: #008CBA;
+							  border: none;
+							  color: white;
+							  padding: 5px 5px;
+							  text-align: center;
+							  text-decoration: none;
+							  display: inline-block;
+							  border-radius: 2px;
+							  font-size: 16px;">
+						      Go To Application</button>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
   						<summary>Recycle Bot</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
 		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
