--- a/gan.html
+++ b/gan.html
@@ -53,6 +53,8 @@
 				      	<center><canvas id="myChart"></canvas></center>
 				  	  </div>
 
+				  	  <div id="result"></div>
+
 					  <div style="height:10px;font-size:5px;">&nbsp;</div>
 				      
 					  <h1 style = "text-align:center";>How It Works</h1>
