Added responsive video

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<video controls autoplay loop>
+		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
