--- a/gan.html
+++ b/gan.html
@@ -56,8 +56,8 @@
 				  	  <div id="result"></div>
 
 					  <div style="height:10px;font-size:5px;">&nbsp;</div>
-				      
-					  <h1 style = "text-align:center";>How It Works</h1>
+					  
+					  <h2 style = "font-weight: bold;">How It Works</h2>
 					  <img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
 		  			  <div style="height:20px;font-size:15px;">&nbsp;</div>
 				    </center>
