--- a/projects.html
+++ b/projects.html
@@ -162,7 +162,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Q-Network">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
-		  					<video controls autoplay loop>
+		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/mspacman.mp4" type="video/mp4">
 							</video>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
