Social Media Forecasting Update
Minor CSS fix adding more space for the individual projects page as well

--- a/gan.html
+++ b/gan.html
@@ -11,7 +11,7 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper2">
-				<section id="vb">
+				<section id="gan">
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
 				      <h2 style = "font-weight: bold;">Interactive Generative Adversarial Networks</h2>
