--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,31 @@
   					 <div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
+  						<summary>Social Media Usage Analysis</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<button onclick="window.location.href='forecasting.html';" style="  
+						      background-color: #008CBA;
+							  border: none;
+							  color: white;
+							  padding: 5px 5px;
+							  text-align: center;
+							  text-decoration: none;
+							  display: inline-block;
+							  border-radius: 2px;
+							  font-size: 16px;">
+						      Go To Application</button>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Instagram-Forecasting">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<img src="images/insta1.png" alt="Likes Given Per Account" class="responsive">
+		  					<img src="images/insta2.png" alt="Forecasting" class="responsive">
+		  					<img src="images/insta3.png" alt="Forecasting" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
   						<summary>Real Time Virtual Background</summary>
   						<div style="height:15px;font-size:15px;">&nbsp;</div>
     						<button onclick="window.location.href='vb.html';" style="  
@@ -165,19 +190,6 @@
 		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/mspacman.mp4" type="video/mp4">
 							</video>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Forecasting My Instagram Usage</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Instagram-Forecasting">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/insta1.png" alt="Likes Given Per Account" class="responsive">
-		  					<img src="images/insta2.png" alt="Forecasting" class="responsive">
-		  					<img src="images/insta3.png" alt="Forecasting" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
