--- a/vb.html
+++ b/vb.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>Virtual Background</title>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
