Bootstrap CSS Update

--- a/forecasting.html
+++ b/forecasting.html
@@ -6,20 +6,22 @@
 		<title>Social Media Usage Analysis</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="plotly">
-					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
+					<p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='projects.html' role="button">Go Back</a></p>
   					 <center><h1 style = "font-weight: bold;">Social Media Usage Analysis</h1></center>
-  					 <center><h2 style = "font-weight: bold;">Media Consumption Per Account</h2></center>
+  					 <div style="height:15px;font-size:15px;">&nbsp;</div>
+  					 <center><h3 style = "font-weight: bold;">Media Consumption Per Account</h3></center>
   					 <div id="23eaa112-379d-48fe-95d8-646e056491e2" class="plotly-graph-div" style="height:100%; width:100%;"></div>
   					 <div style="height:20px;font-size:20px;">&nbsp;</div>
-  					 <center><h2 style = "font-weight: bold;">Future Forecasting</h2></center>
+  					 <center><h3 style = "font-weight: bold;">Future Forecasting</h3></center>
 				     <div id="8d1cc242-a725-4891-8a36-2e88e3415286" class="plotly-graph-div" style="height:100%; width:100%;"></div>
 				     <div style="height:20px;font-size:20px;">&nbsp;</div>
-				     <div id = "seasonal"><center><h2 style = "font-weight: bold;">Seasonal Trends</h2></center><div>
+					 <center><h2 style = "font-weight: bold;">Seasonal Trends</h3></center>
 				     <div id="7fc8313f-85d9-47f3-88cc-4ea18e560b03" class="plotly-graph-div" style="height:100%; width:100%;"></div>
 			</div>
 	</body>
