--- a/vb.html
+++ b/vb.html
@@ -7,13 +7,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="vb">
-					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
-  					 
+					<p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='projects.html' role="button">Go Back</a></p>
 				    <h1>Virtual Background</h1>
 				    <video id="video" width="640" height="480" autoplay playsinline class = "responsive"></video>
 				    <center>
