Main Page Bootstrap CSS Update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -18,13 +19,14 @@
 					<div style="height:50px;font-size:5px;">&nbsp;</div>
 
 					<section id="header">
-	  					<h2>
+	  					<h5>
 	  						<a href="about.html">About Me</a>
-	  						<small style="opacity:0%; font-size:65%">|</small>
+	  						<small style="opacity:0%; font-size:65%">&nbsp;</small>
 	  						<small>|</small>
-	  						<small style="opacity:0%; font-size:65%">|</small>
+	  						<small style="opacity:0%; font-size:65%">&nbsp;</small>
 	  						<a href="projects.html">Projects</a>
-	  					</h2>
+	  					</h5>
+	  					<div style="height:5px;font-size:5px;">&nbsp;</div>
 	  				</section>
 
 	  				<div style="height:20px;font-size:5px;">&nbsp;</div>
@@ -32,36 +34,17 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
-							<h1>Vee Upatising</h1>
-							<h2 style="font-size:80%">Software Engineering</h2>
-							<h2 style="font-size:80%">Test Developer</h2>
-							<h2 style="font-size:80%">at <a href="https://workera.ai/">Workera.AI</a></h2>
-						    <button onclick="window.location.href='assets/resume.pdf';" style="  
-						      background-color: #3399ff;
-							  border: none;
-							  color: white;
-							  padding: 5px 5px;
-							  text-align: center;
-							  text-decoration: none;
-							  display: inline-block;
-							  border-radius: 2px;
-							  font-size: 16px;">
-						      Resume</button>
+							<h2>Vee Upatising</h2>
+							<h5 style="font-size:80%">Software Engineering</h2>
+							<h5 style="font-size:80%">Test Developer</h2>
+							<h5 style="font-size:80%">at <a href="https://workera.ai/">Workera.AI</a></h2>
+							<div style="height:5px;font-size:5px;">&nbsp;</div>
+							<a class="btn btn-primary btn-sm" href='assets/resume.pdf' role="button">View Resume</a>
 						    <div style="height:15px;font-size:5px;">&nbsp;</div>
 							<center><canvas id="myChart"></canvas></center>
 							<div style="height:15px;font-size:5px;">&nbsp;</div>
-							<button onclick="window.location.href='https://app.workera.ai/public/candidate/certificate?code=ASNTE2Q0';" style="  
-						      background-color: #3399ff;
-							  border: none;
-							  color: white;
-							  padding: 5px 5px;
-							  text-align: center;
-							  text-decoration: none;
-							  display: inline-block;
-							  border-radius: 2px;
-							  font-size: 16px;">
-						      View My Certification</button>
-						      <div style="height:30px;font-size:5px;">&nbsp;</div>
+							<a class="btn btn-primary btn-sm" href='https://app.workera.ai/public/candidate/certificate?code=ASNTE2Q0' role="button">View Certification</a>
+							<div style="height:15px;font-size:5px;">&nbsp;</div>
 						</header>
 						<footer>
 							<ul class="icons">
@@ -75,9 +58,10 @@
 					<div style="height:20px;font-size:5px;">&nbsp;</div>
 
 					<section id="header">
-	  					<h1>
+	  					<h3>
 	  						<a href="certifications.html">Certificates</a>
-	  					</h1>
+	  					</h3>
+	  					<div style="height:10px;font-size:10px;">&nbsp;</div>
 	  				</section>
 
 	  				<section id="invis">
