Super Resolution Bootstrap CSS Update

--- a/model.html
+++ b/model.html
@@ -6,12 +6,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="vb">
-					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
+					<p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='projects.html' role="button">Go Back</a></p>
   					 <center>
 				      <h1>Super Resolution</h1>
 				      <p style = "text-align:center;" id="title">Upload a 128x128 image to increase its resolution to 256x256</p>
