--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -15,7 +16,7 @@
 			<div id="wrapper2">
 
         <section id="projects">
-            <p style="text-align: left; letter-spacing: 1px;"><a href = "index.html">Go Back</a></p>
+            <p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='index.html' role="button">Go Back</a></p>
             <span class="avatar"><img src="images/circle.png" alt="" / class="center"></span>
             <div style="height:20px;font-size:15px;">&nbsp;</div>
             <h1>About Me</h1>
