--- a/certifications.html
+++ b/certifications.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -13,7 +14,7 @@
 			<div style="height:65px;font-size:5px;">&nbsp;</div>
 			<div id="wrapper2">
 				<section id="projects">
-					<p style="text-align: left; letter-spacing: 1px"><a href = "index.html">Go Back</a></p>
+					<p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='index.html' role="button">Go Back</a></p>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<table style="width:100%">
 						  <tr>
