Bootstrap Cards Update

--- a/about.html
+++ b/about.html
@@ -19,15 +19,20 @@
             <p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='index.html' role="button">Go Back</a></p>
             <span class="avatar"><img src="images/circle.png" alt="" / class="center"></span>
             <div style="height:20px;font-size:15px;">&nbsp;</div>
-            <h1>About Me</h1>
-            <div style="height:15px;font-size:15px;">&nbsp;</div>
-            <p> &emsp; I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. </p>
-			<div style="height:5px;font-size:15px;">&nbsp;</div>
-            <p> &emsp; I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself.</p>
-            <div style="height:15px;font-size:15px;">&nbsp;</div>
-  			<p> &emsp; I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club during college. These are some photos showcasing the fun I had during that time period as well as a video I filmed during my senior year showcasing the skate community.</p>
+            <div class="card">
+  				<div class="card-header">
+				    <h1>About Me</h1>
+				</div>
+				<div class="card card-body bg-light pb-0 pt-0.5">
+					 <p> &emsp; I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. </p>
+					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		            <p> &emsp; I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself.</p>
+		            <div style="height:15px;font-size:15px;">&nbsp;</div>
+		  			<p> &emsp; I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club during college. These are some photos showcasing the fun I had during that time period as well as a video I filmed during my senior year showcasing the skate community.</p>
+				</div>
+			</div>
 
-            <div style="height:15px;font-size:15px;">&nbsp;</div>
+		  	<div style="height:15px;font-size:15px;">&nbsp;</div>
 
 			<img src="images/umass.jpg" alt="skateclub" class="responsive">
 
