--- a/forecasting.html
+++ b/forecasting.html
@@ -13,15 +13,15 @@
 			<div id="wrapper2">
 				<section id="plotly">
 					 <p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='projects.html' role="button">Go Back</a></p>
-  					 <center><h1 style = "font-weight: bold;">Social Media Usage Analysis</h1></center>
+  					 <center><h1>Social Media Usage Analysis</h1></center>
   					 <div style="height:15px;font-size:15px;">&nbsp;</div>
-  					 <center><h3 style = "font-weight: bold;">Media Consumption Per Account</h3></center>
+  					 <center><h3>Media Consumption Per Account</h3></center>
   					 <div id="23eaa112-379d-48fe-95d8-646e056491e2" class="plotly-graph-div" style="height:100%; width:100%;"></div>
   					 <div style="height:20px;font-size:20px;">&nbsp;</div>
-  					 <center><h3 style = "font-weight: bold;">Future Forecasting</h3></center>
+  					 <center><h3>Future Forecasting</h3></center>
 				     <div id="8d1cc242-a725-4891-8a36-2e88e3415286" class="plotly-graph-div" style="height:100%; width:100%;"></div>
 				     <div style="height:20px;font-size:20px;">&nbsp;</div>
-					 <center><h2 style = "font-weight: bold;">Seasonal Trends</h3></center>
+					 <center><h2>Seasonal Trends</h3></center>
 				     <div id="7fc8313f-85d9-47f3-88cc-4ea18e560b03" class="plotly-graph-div" style="height:100%; width:100%;"></div>
 			</div>
 	</body>
