--- a/gan.html
+++ b/gan.html
@@ -14,8 +14,15 @@
 				<section id="gan">
 					<p style="text-align: left; letter-spacing: 1px"><a class= "btn btn-secondary btn-sm" href='projects.html' role="button">Go Back</a></p>
   					 <center>
-				      <h2 style = "font-weight: bold;">Interactive Generative Adversarial Networks</h2>
-				      <p style = "text-align:center";>Drag the slider to use a Generative Adverarial Network to draw Anime style faces. Alternatively, you can press the 'Generate Random' button to generate a face from a random input instead.</p>
+  					 <div class="card">
+  					 	<div class="card-header">
+				      		<h2>Interactive Generative Adversarial Networks</h2>
+				      	</div>
+					    <div class="card card-body bg-light pb-0 pt-0.5">
+						    <p style = "text-align:center; font-size:110%";>Drag the slider to use a Generative Adverarial Network to draw Anime style faces. Alternatively, you can press the 'Generate Random' button to generate a face from a random input instead.</p>
+						</div>
+					  </div>
+					  <div style="height:15px;font-size:15px;">&nbsp;</div>
 				      <h5 style = "text-align:center";>Generated Output</h5>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <div style="height:10px;font-size:5px;">&nbsp;</div>
