--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,9 @@
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<a class="btn btn-primary" href='gan.html' role="button">View Web App</a>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
+		  					<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
+		  					</div>
 		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
